[32-1][Linhao & Weixiao] fix Dockerfile to import jdk 17